[Remove] deprecated usage